feat(article): add basic markup

--- a/article/main.tex
+++ b/article/main.tex
@@ -3,11 +3,18 @@
 \input{article/preamble}
 
 \begin{document}
+
+\include{article/title}
+\include{article/task}
+\include{article/abstract}
+\include{article/article}
+
 this is a \texttt{>= <=mono spaced font example}.
 
 
-фіваоалвфіжідвлаофджівлофждівл аофділжвоадфілвжоаждфілвоа фділвофділжвфі джлвоадлфівоаджфліоваджлфіоа
-фжідвлаофдлівоаджфілвоа
+фіваоалвфіжі двлаофдж івлофждівл аофді
+лжвоадфілв жоаждфілвоа фділвофділжвфі джлвоадлфі воаджфліо ваджлфіоа
+фжідв лаофд лівоаджфі лвоа
 
 
 фідвалофджівлажфділвожфід
