--- a/article/preamble.tex
+++ b/article/preamble.tex
@@ -1,6 +1,6 @@
 %%% Шрифти
 \usepackage[english,ukrainian]{babel}
-\usepackage[skip=1.25mm]{parskip} % Абзацний відступ
+\setlength\parindent{1.25cm} % Абзацний відступ
 \usepackage{fontspec}
     \setmainfont{Times New Roman}
     \setsansfont{Arial}
