feat(article): add more sections about dev tools

--- a/article/abstract.tex
+++ b/article/abstract.tex
@@ -1,13 +1,26 @@
+\thispagestyle{empty}
+
 \begin{center}
-\textbf{АНОТАЦІЯ}
+\textbf{Національний технічний  університет України \\
+``Київський політехнічний інститут імені Ігоря Сікорського''}
+\end{center}
+
+here should be task
+
+
+\newpage
+\thispagestyle{empty}
+\begin{center}
+\textbf{\Large АНОТАЦІЯ}
 \end{center}
 
 some abstract
 
 \newpage
+\thispagestyle{empty}
 
 \begin{center}
-\textbf{ABSTRACT}
+\textbf{\Large ABSTRACT}
 \end{center}
 
 some abstract
