--- a/article/main.tex
+++ b/article/main.tex
@@ -5,8 +5,8 @@
 \begin{document}
 
 \include{article/title}
-\include{article/task}
 \include{article/abstract}
 \include{article/article}
+\include{article/bibliography}
 
 \end{document}
