feat(article): add diagrams; split structure

--- a/article/main.tex
+++ b/article/main.tex
@@ -5,8 +5,19 @@
 \begin{document}
 
 \include{article/title}
-\include{article/abstract}
-\include{article/article}
-\include{article/bibliography}
+\include{article/task}
+\include{article/structural/abstract}
+
+\thispagestyle{empty}
+\tableofcontents
+
+\include{article/structural/terminology}
+\include{article/structural/introduction}
+\include{article/sections/section1}
+\include{article/sections/section2}
+\include{article/sections/section3}
+\include{article/sections/section4}
+\include{article/structural/conclusion}
+\include{article/structural/bibliography}
 
 \end{document}
