--- a/article/structural/abstract.tex
+++ b/article/structural/abstract.tex
@@ -14,7 +14,7 @@ here should be task
 \textbf{\Large АНОТАЦІЯ}
 \end{center}
 
-some abstract
+АНОТАЦІЯ
 
 \newpage
 \thispagestyle{empty}
@@ -23,4 +23,4 @@ some abstract
 \textbf{\Large ABSTRACT}
 \end{center}
 
-some abstract
+ABSTRACT
