--- a/article/preamble.tex
+++ b/article/preamble.tex
@@ -2,6 +2,7 @@
 \usepackage[english,ukrainian]{babel}
     \addto\captionsukrainian{\def\refname{СПИСОК ВИКОРИСТАНИХ ДЖЕРЕЛ}}
     \addto\captionsukrainian{\renewcommand{\figurename}{Рисунок}}
+    \addto\captionsukrainian{\renewcommand{\contentsname}{ЗМІСТ}}
 \setlength\parindent{1.25cm} % Абзацний відступ
 \usepackage{fontspec}
     \setmainfont{Times New Roman}
