feat(article): section about implementation

--- a/article/preamble.tex
+++ b/article/preamble.tex
@@ -44,7 +44,6 @@
 \usepackage{longtable}
 \usepackage{multirow}
 
-
 \usepackage{chngcntr} % Змінити лічильники на figure
     \counterwithin{figure}{section}
     \counterwithin{table}{section}
@@ -65,3 +64,5 @@
 %%% Команди
 \let\oldsection\section
 \renewcommand{\section}{\newpage\oldsection}
+
+\sloppy
