--- a/article/sections/section1.tex
+++ b/article/sections/section1.tex
@@ -2,9 +2,16 @@
 
 % https://applied-language-technology.mooc.fi/html/notebooks/part_iii/02_universal_dependencies.html
 
-\subsection{Обробка природної мови}
+% https://universaldependencies.org/u/pos/
 
-\subsection{Проблематика створення фреймворку для розмічення різних мов}
+\subsection{Обробка природної мови}
+Обробка природної мови - це область комп'ютерної лінгвістики, мета якої полягає у
+знаходженні значимої інформації з текстів, подальшому аналізі цієї інформації
+та прикладному застосуванні проаналізованих даних. Предметом дослідження є
+природні мови - ті, які природньо розвивалася з часом та які люди використовують для того,
+щоб комунікувати між собою.
+
+\subsection{Проблематика аналізу природної мови}
 
 укр - 122275 токенів 122324 слова 7060 реченнь
 
@@ -38,8 +45,7 @@
     \item UD має бути легко зрозумілим і використаним користувачами, які не знають мови
 \end{enumerate}
 
-\subsection{Репозиторій корпусу текстів Universal Dependencies українською}
-Як об'єкт для дослідження використовувася \cite{bib3}
+\subsection{Парсинг залежностей (dependency parsing)}
 
 \subsection{Формат даних CoNLL-U}
 
