--- a/article/main.tex
+++ b/article/main.tex
@@ -14,6 +14,7 @@
 \include{article/structural/terminology}
 \include{article/structural/introduction}
 \include{article/sections/section1}
+\include{article/sections/section2_0}
 \include{article/sections/section2}
 \include{article/sections/section3}
 \include{article/sections/section4}
