feat(article): more text; fix line spacing to 1.5

--- a/article/preamble.tex
+++ b/article/preamble.tex
@@ -8,9 +8,8 @@
     \setmainfont{Times New Roman}
     \setsansfont{Arial}
     \setmonofont{Fira Code}
-\usepackage{setspace} % Міжрядковий інтервал
-    \onehalfspacing % 1.5
-
+\usepackage{lipsum} % Міжрядковий інтервал
+    \linespread{1.5} 
 
 %%% Береги та колонтитули
 \usepackage{geometry}
