--- a/article/sections/section2.tex
+++ b/article/sections/section2.tex
@@ -48,8 +48,11 @@
     \item ці файли повинні задовольняти усім вимогам CoNLL-U
 \end{enumerate}
 
-У ході роботи було розроблено діаграму прецедентів, рисунок \ref{img:use_case_diagram}.
-По якій можна детальніше ознайомитися із прикладами використання програми.
+У ході роботи було розроблено діаграму прецедентів, рисунок \ref{img:use_case_diagram}. Програмнний продукт поставляється із різними
+інструментами, розробленими спільнотою Universal Dependencies, тому
+варіанти використання розширюються цими інструментами. У діаграмі наведено
+тільки один такий праклад використання - це перевірка правильності формату
+CoNLL-U.
 
 \begin{figure}[p]
   \begin{center}
