--- a/article/sections/section1.tex
+++ b/article/sections/section1.tex
@@ -35,7 +35,7 @@
 це просто набір синтаксичних дерев, які були послідовно анотовані за допомогою UD
 або якоїсь іншої структури.
 
-Структура UD є компромісом між кількома взаємопов'язаними критеріями, які наведені нижче:
+Структура UD є компромісом між кількома конкуруючими критеріями, які наведені нижче:
 
 \begin{enumerate}
     \item UD має бути придатним для комп'ютерного розбору з високою точністю
@@ -49,7 +49,7 @@
 
 \subsection{Формат даних CoNLL-U}
 
-\begin{table}[h]
+\begin{table}[ht]
 \begin{tabular}{|l|l|}
 \hline
   Field   & Description \\ \hline
