fix(article): add connection types to use-case diagram rename images

--- a/article/sections/section4.tex
+++ b/article/sections/section4.tex
@@ -116,7 +116,7 @@ PyCharm також має вбудований термінал, що значн
 
 \begin{figure}[ht]
   \begin{center}
-    \includegraphics[width=\linewidth]{git-snapshots.pdf}
+    \includegraphics[width=\linewidth]{git_snapshots.pdf}
   \end{center}
   \caption{Зберігання даних у вигляді знімків станів}
   \label{img:git_snapshots}
